[FIX] 📝 menu z-index and header

--- a/src/styles/Menu.module.scss
+++ b/src/styles/Menu.module.scss
@@ -10,6 +10,7 @@
   top: 60px;
   right: 50px;
   background: #fff;
+  z-index: 1;
 }
 .Menu ul {
   list-style: none;
